@@ -1,4 +1,5 @@
 // Copyright (c) 2015-2015 Rinat Zakirov
+// Copyright (c) 2015-2015 Josh Blum
 // SPDX-License-Identifier: BSL-1.0
 
 #include <Pothos/Framework.hpp>
@@ -11,6 +12,8 @@
  * Each input byte represents a symbol of bit width specified by modulus.
  * Each output byte represents a bit and can take the values of 0 and 1.
  *
+ * This block can be used to convert between bytes and bits when symbol size is 8.
+ *
  * |category /Digital
  * |category /Symbol
  *
@@ -19,6 +22,8 @@
  * |widget SpinBox(minimum=1, maximum=8)
  *
  * |param bitOrder[Bit Order] The bit ordering: MSBit or LSBit.
+ * For MSBit, the high bit of the input symbol becomes output 0.
+ * For LSBit, the low bit of the input symbol becomes output 0.
  * |option [MSBit] "MSBit"
  * |option [LSBit] "LSBit"
  * |default "MSBit"
@@ -72,13 +77,13 @@ public:
         else throw Pothos::InvalidArgumentException("SymbolsToBits::setBitOrder()", "Order must be LSBit or MSBit");
     }
 
-    void symbolsToBits(const uint8_t *in, uint8_t *out, const size_t len)
+    void symbolsToBits(const unsigned char *in, unsigned char *out, const size_t len)
     {
-        uint8_t sampleBit = 0x1;
+        unsigned char sampleBit = 0x1;
         if (_order == BitOrder::MSBit) sampleBit = 1 << (_mod - 1);
         for (size_t i = 0; i < len; i++)
         {
-            uint8_t symbol = in[i];
+            unsigned char symbol = in[i];
             for (size_t b = 0; b < _mod; b++)
             {
                 *out++ = ((sampleBit & symbol) != 0) ? 1 : 0;
@@ -104,8 +109,8 @@ public:
 
         //perform conversion
         this->symbolsToBits(
-            inBuff.as<const uint8_t*>(),
-            outBuff.as<uint8_t*>(),
+            inBuff.as<const unsigned char*>(),
+            outBuff.as<unsigned char*>(),
             symLen
         );
 
@@ -114,10 +119,19 @@ public:
         outputPort->produce(symLen * _mod);
     }
 
+    void propagateLabels(const Pothos::InputPort *port)
+    {
+        auto outputPort = this->output(0);
+        for (const auto &label : port->labels())
+        {
+            outputPort->postLabel(label.toAdjusted(_mod, 1));
+        }
+    }
+
 protected:
     typedef enum {LSBit, MSBit} BitOrder;
     BitOrder _order;
-    uint8_t _mod;
+    unsigned char _mod;
 };
 
 static Pothos::BlockRegistry registerSymbolsToBits(
